--- a/templates/authentication/index.html
+++ b/templates/authentication/index.html
@@ -16,10 +16,28 @@
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
+        
+        {% for message in messages %}
+        <div class = "alert alert-{{message.tags}} alert-dismissible fade show" role = "alert">
+        <strong> Message:</strong> {{message}}
+        <button type = "button" class = "close" data-dismiss = "alert" aria-label = "Close">
+        <span aria-hidden = "true">&times;</span>
+        </button>
+        </div>
+        {% endfor %}
+
+
         <h3>LOGIN PAGE</h3>
+
+        {% if user.is_authenticated %}
+        <h3>Hello {{fname}} </h3>
+        <h4>You are successfully logged in </h4>
+
+        {% else %}
         <button type="submit"><a href="/signup">Signup</a></button>
         <button type="submit"><a href="/signin">Signin</a></button>
         <button type="submit"><a href="/signout">Signout</a></button>
+        {% endif %}
 
         <script src="" async defer></script>
     </body>
