--- a/templates/authentication/signup.html
+++ b/templates/authentication/signup.html
@@ -13,8 +13,36 @@
         <link rel="stylesheet" href="">
     </head>
     <body>
-        <h3> Signup </h3>
-        
+        <h3> Signu </h3>
+
+        <form action = "/signup" method="post">
+        {% csrf_token %}
+          <label for ="">Username</label>
+          <input type = "text" id = "username" name = "username" placeholder="Create a username" required>
+          <br>
+
+          <label for ="">First Name</label>
+          <input type = "text" id = "fname" name = "fname" placeholder="Enter your first name" required>
+          <br>
+
+          <label for ="">Last Name</label>
+          <input type = "text" id = "lname" name = "lname" placeholder="Enter your last name" required>
+          <br>
+
+          <label for ="">Email</label>
+          <input type = "email" id = "email" name = "email" placeholder="Enter your email" required>
+          <br>
+
+          <label for ="">Password</label>
+          <input type = "password" id = "pass1" name = "pass1" placeholder="Create a password" required>
+          <br>
+
+          <label for ="">Confirm Password</label>
+          <input type = "password" id = "pass2" name = "pass2" placeholder="Confirm the password" required>
+          <br>
+
+          <button type="submit">Signup</a></button>
+        </form>
         <script src="" async defer></script>
     </body>
 </html>
